regress/sys/kern/extent/extest.exp
# $OpenBSD: extest.exp,v 1.5 2019/09/11 12:30:34 kettenis Exp $
# $NetBSD: extest.exp,v 1.9 2005/03/15 18:27:23 bouyer Exp $
# real output must start in line 5

output for test1
result: 0x30
extent `test1' (0x0 - 0x4f), flags = 0x0
     0x0 - 0x4f
output for test2
result: 0x20
extent `test2' (0x0 - 0x2f), flags = 0x2
     0x0 - 0xf
     0x20 - 0x2f
output for test3
result: 0x20
extent `test3' (0x0 - 0x3f), flags = 0x2
     0x0 - 0x1f
     0x20 - 0x2f
     0x30 - 0x3f
output for test4
result: 0xf0000000
extent `test4' (0xf0000000 - 0xffffffff), flags = 0x0
     0xf0000000 - 0xf0000000
     0xf1000000 - 0xf1000000
output for test5
result: 0xf0000000
extent `test5' (0xf0000000 - 0xffffffff), flags = 0x0
     0xf0000000 - 0xf0000000
output for test6
result: 0x0
result: 0x8
result: 0xa
extent `test6' (0x0 - 0xb), flags = 0x0
     0x0 - 0xb
output for test7
result: 0x0
result: 0x8
extent `test7' (0x0 - 0xb), flags = 0x0
     0x0 - 0x6
     0x8 - 0xb
output for test8
result: 0x0
error: Resource temporarily unavailable
extent `test8' (0x0 - 0x4f), flags = 0x2
     0x0 - 0xf
     0x30 - 0x3f
output for test9
result: 0x0
result: 0xd
result: 0x10
extent `test9' (0x0 - 0x4f), flags = 0x0
     0x0 - 0x3
     0xd - 0xe
     0x10 - 0x17
output for test10
result: 0xc0010000
result: 0xc0020000
extent `test10' (0xc0002000 - 0xffffe000), flags = 0x0
     0xc0010000 - 0xc0011fff
     0xc0020000 - 0xc0021fff
extent `test10' (0xc0002000 - 0xffffe000), flags = 0x0
     0xc0010000 - 0xc0011fff
result: 0xc0022000
extent `test10' (0xc0002000 - 0xffffe000), flags = 0x0
     0xc0010000 - 0xc0011fff
     0xc0022000 - 0xc0031fff
output for test11
result: 0x10
result: 0x1e
result: 0x20
error: Resource temporarily unavailable
result: 0x14
extent `test11' (0x10 - 0x20), flags = 0x2
     0x10 - 0x13
     0x14 - 0x14
     0x1e - 0x1f
     0x20 - 0x20
output for test12
error: Resource temporarily unavailable
output for test13
extent `test13' (0x0 - 0xffffffff), flags = 0x0
     0xfce00000 - 0xfcefffff
output for test14
extent `test14' (0x0 - 0xffffffff), flags = 0x0
     0xfce00000 - 0xfce010ff
output for test15
extent `test15' (0x0 - 0xffffffff), flags = 0x0
     0xf8000000 - 0xffffffff
output for test16
extent `test16' (0x0 - 0xffffffff), flags = 0x0
     0x0 - 0x1fffffff
output for test17
extent `test17' (0x0 - 0xffffffffffffffff), flags = 0x0
     0x0 - 0xffffffffffffffff
output for test18
extent `test18' (0x0 - 0xffff), flags = 0x0
     0x0 - 0xcff
     0xf000 - 0xffff
output for test19
extent `test19' (0x0 - 0xffff), flags = 0x0
     0x0 - 0xcff
output for test20
extent `test20' (0x0 - 0xffff), flags = 0x0
     0xf000 - 0xffff
